--- a/.classpath
+++ b/.classpath
@@ -1,10 +1,24 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
-	<classpathentry kind="src" path="src"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8">
+		<attributes>
+			<attribute name="maven.pomderived" value="true"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="src" output="target/classes" path="src">
+		<attributes>
+			<attribute name="optional" value="true"/>
+			<attribute name="maven.pomderived" value="true"/>
+		</attributes>
+	</classpathentry>
 	<classpathentry kind="lib" path="C:/Users/rohan/Documents/lucene-8.4.1/lucene-8.4.1/core/lucene-core-8.4.1.jar"/>
 	<classpathentry kind="lib" path="C:/Users/rohan/Documents/lucene-8.4.1/lucene-8.4.1/analysis/common/lucene-analyzers-common-8.4.1.jar"/>
 	<classpathentry kind="lib" path="C:/Users/rohan/Documents/lucene-8.4.1/lucene-8.4.1/queries/lucene-queries-8.4.1.jar"/>
 	<classpathentry kind="lib" path="C:/Users/rohan/Documents/lucene-8.4.1/lucene-8.4.1/queryparser/lucene-queryparser-8.4.1.jar"/>
-	<classpathentry kind="output" path="bin"/>
+	<classpathentry kind="con" path="org.eclipse.m2e.MAVEN2_CLASSPATH_CONTAINER">
+		<attributes>
+			<attribute name="maven.pomderived" value="true"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="output" path="target/classes"/>
 </classpath>
